[package]
name = "opensea-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3", features = ["derive"] }
tokio = { version = "1.0.0", default-features = false, features = [ "rt-multi-thread", "macros", "sync" ] }
futures-util = { version = "0.3.21", features = ["io"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"] }
log = { version = "0.4", features = ["std"] }
serenity = "*"
async-trait = "*"